// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildOptOutRequest > erzeugt die deutsche Loeschanfrage mit Geburtsdatum und Telefon 1`] = `
{
  "htmlBody": "<p>Sehr geehrte Damen und Herren,</p>
<p>wir wenden uns im Auftrag und in Vollmacht der nachfolgend genannten betroffenen Person an Sie. Eine schriftliche Vollmacht zur Wahrnehmung ihrer Betroffenenrechte liegt uns vor und wird Ihnen auf Wunsch vorgelegt.</p>
<p>Betroffene Person:<br>
Name: Erika Mustermann<br>
Geburtsdatum: 14.03.1985<br>
Anschrift: Musterstraße 12, 10115 Berlin, DE<br>
E-Mail-Adressen: erika.mustermann@example.com, e.mustermann@example.org<br>
Telefonnummern: +49 30 1234567, +49 170 9876543</p>
<p>Namens und im Auftrag der betroffenen Person fordern wir Sie auf, sämtliche zu dieser Person bei Dummy Broker (E-Mail) gespeicherten personenbezogenen Daten gemäß Art. 17 DSGVO (Recht auf Löschung) unverzüglich und vollständig zu löschen. Soweit die Verarbeitung auf Art. 6 Abs. 1 lit. f DSGVO gestützt wird, ergibt sich die Löschpflicht spätestens aus Art. 17 Abs. 1 lit. c DSGVO in Verbindung mit dem nachstehend erklärten Widerspruch.</p>
<p>Soweit Sie personenbezogene Daten der betroffenen Person zu Zwecken der Direktwerbung verarbeiten, legen wir hiermit zugleich gemäß Art. 21 Abs. 2 DSGVO Widerspruch gegen diese Verarbeitung ein.</p>
<p>Wir weisen darauf hin, dass diese E-Mail gemäß Art. 12 Abs. 2 DSGVO einen zulässigen Kommunikationsweg für die Geltendmachung der Betroffenenrechte unserer Auftraggeberin / unseres Auftraggebers darstellt. Ein Verweis auf ein Online-Formular oder einen anderen Kanal stellt keine Erfüllung der vorliegenden Anfrage dar.</p>
<p>Wir bitten Sie ferner um Auskunft nach Art. 15 DSGVO darüber, welche personenbezogenen Daten der betroffenen Person bei Ihnen verarbeitet wurden und an welche Empfänger oder Kategorien von Empfängern diese Daten offengelegt wurden.</p>
<p>Darüber hinaus bitten wir Sie, die betroffene Person in eine interne Sperrliste aufzunehmen, um eine erneute Erhebung und Speicherung ihrer Daten über Dritt- oder Fremdquellen künftig zu verhindern.</p>
<p>Bitte bestätigen Sie uns die vollständige Löschung der Daten sowie die Aufnahme in die Sperrliste schriftlich. Nach Art. 12 Abs. 3 DSGVO haben Sie uns hierüber unverzüglich, in jedem Fall aber innerhalb eines Monats nach Eingang dieses Antrags, zu unterrichten.</p>
<p>Für Rückfragen antworten Sie bitte direkt auf diese E-Mail; unsere Antwortadresse enthält ein Aktenzeichen zur Zuordnung.</p>
<p>Mit freundlichen Grüßen<br>
GoKognito<br>
– im Auftrag der betroffenen Person –</p>
<p>Aktenzeichen: test1234abcd5678</p>",
  "subject": "[Ref: test1234abcd5678] Datenlöschanfrage gemäß Art. 17 DSGVO",
  "textBody": "Sehr geehrte Damen und Herren,

wir wenden uns im Auftrag und in Vollmacht der nachfolgend genannten betroffenen Person an Sie. Eine schriftliche Vollmacht zur Wahrnehmung ihrer Betroffenenrechte liegt uns vor und wird Ihnen auf Wunsch vorgelegt.

Betroffene Person:
Name: Erika Mustermann
Geburtsdatum: 14.03.1985
Anschrift: Musterstraße 12, 10115 Berlin, DE
E-Mail-Adressen: erika.mustermann@example.com, e.mustermann@example.org
Telefonnummern: +49 30 1234567, +49 170 9876543

Namens und im Auftrag der betroffenen Person fordern wir Sie auf, sämtliche zu dieser Person bei Dummy Broker (E-Mail) gespeicherten personenbezogenen Daten gemäß Art. 17 DSGVO (Recht auf Löschung) unverzüglich und vollständig zu löschen. Soweit die Verarbeitung auf Art. 6 Abs. 1 lit. f DSGVO gestützt wird, ergibt sich die Löschpflicht spätestens aus Art. 17 Abs. 1 lit. c DSGVO in Verbindung mit dem nachstehend erklärten Widerspruch.

Soweit Sie personenbezogene Daten der betroffenen Person zu Zwecken der Direktwerbung verarbeiten, legen wir hiermit zugleich gemäß Art. 21 Abs. 2 DSGVO Widerspruch gegen diese Verarbeitung ein.

Wir weisen darauf hin, dass diese E-Mail gemäß Art. 12 Abs. 2 DSGVO einen zulässigen Kommunikationsweg für die Geltendmachung der Betroffenenrechte unserer Auftraggeberin / unseres Auftraggebers darstellt. Ein Verweis auf ein Online-Formular oder einen anderen Kanal stellt keine Erfüllung der vorliegenden Anfrage dar.

Wir bitten Sie ferner um Auskunft nach Art. 15 DSGVO darüber, welche personenbezogenen Daten der betroffenen Person bei Ihnen verarbeitet wurden und an welche Empfänger oder Kategorien von Empfängern diese Daten offengelegt wurden.

Darüber hinaus bitten wir Sie, die betroffene Person in eine interne Sperrliste aufzunehmen, um eine erneute Erhebung und Speicherung ihrer Daten über Dritt- oder Fremdquellen künftig zu verhindern.

Bitte bestätigen Sie uns die vollständige Löschung der Daten sowie die Aufnahme in die Sperrliste schriftlich. Nach Art. 12 Abs. 3 DSGVO haben Sie uns hierüber unverzüglich, in jedem Fall aber innerhalb eines Monats nach Eingang dieses Antrags, zu unterrichten.

Für Rückfragen antworten Sie bitte direkt auf diese E-Mail; unsere Antwortadresse enthält ein Aktenzeichen zur Zuordnung.

Mit freundlichen Grüßen
GoKognito
– im Auftrag der betroffenen Person –

Aktenzeichen: test1234abcd5678",
}
`;

exports[`buildOptOutRequest > erzeugt die deutsche Loeschanfrage ohne optionale Felder 1`] = `
{
  "htmlBody": "<p>Sehr geehrte Damen und Herren,</p>
<p>wir wenden uns im Auftrag und in Vollmacht der nachfolgend genannten betroffenen Person an Sie. Eine schriftliche Vollmacht zur Wahrnehmung ihrer Betroffenenrechte liegt uns vor und wird Ihnen auf Wunsch vorgelegt.</p>
<p>Betroffene Person:<br>
Name: Erika Mustermann<br>
Anschrift: Musterstraße 12, 10115 Berlin, DE<br>
E-Mail-Adressen: erika.mustermann@example.com, e.mustermann@example.org</p>
<p>Namens und im Auftrag der betroffenen Person fordern wir Sie auf, sämtliche zu dieser Person bei Dummy Broker (E-Mail) gespeicherten personenbezogenen Daten gemäß Art. 17 DSGVO (Recht auf Löschung) unverzüglich und vollständig zu löschen. Soweit die Verarbeitung auf Art. 6 Abs. 1 lit. f DSGVO gestützt wird, ergibt sich die Löschpflicht spätestens aus Art. 17 Abs. 1 lit. c DSGVO in Verbindung mit dem nachstehend erklärten Widerspruch.</p>
<p>Soweit Sie personenbezogene Daten der betroffenen Person zu Zwecken der Direktwerbung verarbeiten, legen wir hiermit zugleich gemäß Art. 21 Abs. 2 DSGVO Widerspruch gegen diese Verarbeitung ein.</p>
<p>Wir weisen darauf hin, dass diese E-Mail gemäß Art. 12 Abs. 2 DSGVO einen zulässigen Kommunikationsweg für die Geltendmachung der Betroffenenrechte unserer Auftraggeberin / unseres Auftraggebers darstellt. Ein Verweis auf ein Online-Formular oder einen anderen Kanal stellt keine Erfüllung der vorliegenden Anfrage dar.</p>
<p>Wir bitten Sie ferner um Auskunft nach Art. 15 DSGVO darüber, welche personenbezogenen Daten der betroffenen Person bei Ihnen verarbeitet wurden und an welche Empfänger oder Kategorien von Empfängern diese Daten offengelegt wurden.</p>
<p>Darüber hinaus bitten wir Sie, die betroffene Person in eine interne Sperrliste aufzunehmen, um eine erneute Erhebung und Speicherung ihrer Daten über Dritt- oder Fremdquellen künftig zu verhindern.</p>
<p>Bitte bestätigen Sie uns die vollständige Löschung der Daten sowie die Aufnahme in die Sperrliste schriftlich. Nach Art. 12 Abs. 3 DSGVO haben Sie uns hierüber unverzüglich, in jedem Fall aber innerhalb eines Monats nach Eingang dieses Antrags, zu unterrichten.</p>
<p>Für Rückfragen antworten Sie bitte direkt auf diese E-Mail; unsere Antwortadresse enthält ein Aktenzeichen zur Zuordnung.</p>
<p>Mit freundlichen Grüßen<br>
GoKognito<br>
– im Auftrag der betroffenen Person –</p>
<p>Aktenzeichen: test1234abcd5678</p>",
  "subject": "[Ref: test1234abcd5678] Datenlöschanfrage gemäß Art. 17 DSGVO",
  "textBody": "Sehr geehrte Damen und Herren,

wir wenden uns im Auftrag und in Vollmacht der nachfolgend genannten betroffenen Person an Sie. Eine schriftliche Vollmacht zur Wahrnehmung ihrer Betroffenenrechte liegt uns vor und wird Ihnen auf Wunsch vorgelegt.

Betroffene Person:
Name: Erika Mustermann
Anschrift: Musterstraße 12, 10115 Berlin, DE
E-Mail-Adressen: erika.mustermann@example.com, e.mustermann@example.org

Namens und im Auftrag der betroffenen Person fordern wir Sie auf, sämtliche zu dieser Person bei Dummy Broker (E-Mail) gespeicherten personenbezogenen Daten gemäß Art. 17 DSGVO (Recht auf Löschung) unverzüglich und vollständig zu löschen. Soweit die Verarbeitung auf Art. 6 Abs. 1 lit. f DSGVO gestützt wird, ergibt sich die Löschpflicht spätestens aus Art. 17 Abs. 1 lit. c DSGVO in Verbindung mit dem nachstehend erklärten Widerspruch.

Soweit Sie personenbezogene Daten der betroffenen Person zu Zwecken der Direktwerbung verarbeiten, legen wir hiermit zugleich gemäß Art. 21 Abs. 2 DSGVO Widerspruch gegen diese Verarbeitung ein.

Wir weisen darauf hin, dass diese E-Mail gemäß Art. 12 Abs. 2 DSGVO einen zulässigen Kommunikationsweg für die Geltendmachung der Betroffenenrechte unserer Auftraggeberin / unseres Auftraggebers darstellt. Ein Verweis auf ein Online-Formular oder einen anderen Kanal stellt keine Erfüllung der vorliegenden Anfrage dar.

Wir bitten Sie ferner um Auskunft nach Art. 15 DSGVO darüber, welche personenbezogenen Daten der betroffenen Person bei Ihnen verarbeitet wurden und an welche Empfänger oder Kategorien von Empfängern diese Daten offengelegt wurden.

Darüber hinaus bitten wir Sie, die betroffene Person in eine interne Sperrliste aufzunehmen, um eine erneute Erhebung und Speicherung ihrer Daten über Dritt- oder Fremdquellen künftig zu verhindern.

Bitte bestätigen Sie uns die vollständige Löschung der Daten sowie die Aufnahme in die Sperrliste schriftlich. Nach Art. 12 Abs. 3 DSGVO haben Sie uns hierüber unverzüglich, in jedem Fall aber innerhalb eines Monats nach Eingang dieses Antrags, zu unterrichten.

Für Rückfragen antworten Sie bitte direkt auf diese E-Mail; unsere Antwortadresse enthält ein Aktenzeichen zur Zuordnung.

Mit freundlichen Grüßen
GoKognito
– im Auftrag der betroffenen Person –

Aktenzeichen: test1234abcd5678",
}
`;

exports[`buildOptOutRequest > erzeugt die deutsche Selbst-Anfrage mit Geburtsdatum und Telefon 1`] = `
{
  "htmlBody": "<p>Sehr geehrte Damen und Herren,</p>
<p>ich, Erika Mustermann, mache hiermit als betroffene Person meine Rechte nach der Datenschutz-Grundverordnung (DSGVO) Ihnen gegenüber geltend.</p>
<p>Zu meiner Identifikation:<br>
Name: Erika Mustermann<br>
Geburtsdatum: 14.03.1985<br>
Anschrift: Musterstraße 12, 10115 Berlin, DE<br>
E-Mail-Adressen: erika.mustermann@example.com, e.mustermann@example.org<br>
Telefonnummern: +49 30 1234567, +49 170 9876543</p>
<p>1. Auskunft (Art. 15 Abs. 1 DSGVO)</p>
<p>Ich ersuche Sie um Auskunft darüber, ob personenbezogene Daten zu meiner Person von Ihnen verarbeitet werden, sowie — soweit dies der Fall ist — um Auskunft über:<br>
a) die Verarbeitungszwecke (Art. 15 Abs. 1 lit. a DSGVO),<br>
b) die Kategorien personenbezogener Daten, die verarbeitet werden (Art. 15 Abs. 1 lit. b DSGVO),<br>
c) die Empfänger oder Kategorien von Empfängern, gegenüber denen die personenbezogenen Daten offengelegt worden sind oder noch offengelegt werden (Art. 15 Abs. 1 lit. c DSGVO),<br>
d) die geplante Dauer der Speicherung bzw. die Kriterien für die Festlegung dieser Dauer (Art. 15 Abs. 1 lit. d DSGVO),<br>
e) alle verfügbaren Informationen über die Herkunft der Daten, soweit diese nicht bei mir selbst erhoben wurden (Art. 15 Abs. 1 lit. g DSGVO).</p>
<p>2. Löschung (Art. 17 Abs. 1 DSGVO)</p>
<p>Soweit Sie personenbezogene Daten zu meiner Person verarbeiten, fordere ich Sie auf, diese gemäß Art. 17 Abs. 1 DSGVO unverzüglich und vollständig zu löschen. Soweit die Verarbeitung auf Art. 6 Abs. 1 lit. f DSGVO gestützt wird, ergibt sich die Löschpflicht spätestens aus Art. 17 Abs. 1 lit. c DSGVO in Verbindung mit dem unter Ziffer 3 erklärten Widerspruch.</p>
<p>3. Widerspruch gegen Direktwerbung (Art. 21 Abs. 2 DSGVO)</p>
<p>Soweit personenbezogene Daten zu meiner Person zu Zwecken der Direktwerbung verarbeitet werden, lege ich hiermit gemäß Art. 21 Abs. 2 DSGVO Widerspruch gegen diese Verarbeitung ein. Nach Art. 21 Abs. 3 DSGVO dürfen meine personenbezogenen Daten danach nicht mehr für Zwecke der Direktwerbung verarbeitet werden.</p>
<p>Ich weise darauf hin, dass diese E-Mail gemäß Art. 12 Abs. 2 DSGVO einen zulässigen Kommunikationsweg für die Geltendmachung meiner Betroffenenrechte darstellt. Ein Verweis auf ein Online-Formular oder einen anderen Kanal stellt keine Erfüllung der vorliegenden Anfrage dar.</p>
<p>Nach Art. 12 Abs. 3 DSGVO haben Sie mich über die aufgrund dieses Antrags getroffenen Maßnahmen unverzüglich, in jedem Fall aber innerhalb eines Monats nach Eingang dieses Antrags, zu unterrichten.</p>
<p>Für Rückfragen antworten Sie bitte direkt auf diese E-Mail; die Antwortadresse enthält ein Aktenzeichen zur Zuordnung.</p>
<p>Mit freundlichen Grüßen<br>
Erika Mustermann</p>
<p>Aktenzeichen: test1234abcd5678</p>",
  "subject": "[Ref: test1234abcd5678] Auskunfts- und Löschersuchen gemäß Art. 15, 17, 21 DSGVO",
  "textBody": "Sehr geehrte Damen und Herren,

ich, Erika Mustermann, mache hiermit als betroffene Person meine Rechte nach der Datenschutz-Grundverordnung (DSGVO) Ihnen gegenüber geltend.

Zu meiner Identifikation:
Name: Erika Mustermann
Geburtsdatum: 14.03.1985
Anschrift: Musterstraße 12, 10115 Berlin, DE
E-Mail-Adressen: erika.mustermann@example.com, e.mustermann@example.org
Telefonnummern: +49 30 1234567, +49 170 9876543

1. Auskunft (Art. 15 Abs. 1 DSGVO)

Ich ersuche Sie um Auskunft darüber, ob personenbezogene Daten zu meiner Person von Ihnen verarbeitet werden, sowie — soweit dies der Fall ist — um Auskunft über:
a) die Verarbeitungszwecke (Art. 15 Abs. 1 lit. a DSGVO),
b) die Kategorien personenbezogener Daten, die verarbeitet werden (Art. 15 Abs. 1 lit. b DSGVO),
c) die Empfänger oder Kategorien von Empfängern, gegenüber denen die personenbezogenen Daten offengelegt worden sind oder noch offengelegt werden (Art. 15 Abs. 1 lit. c DSGVO),
d) die geplante Dauer der Speicherung bzw. die Kriterien für die Festlegung dieser Dauer (Art. 15 Abs. 1 lit. d DSGVO),
e) alle verfügbaren Informationen über die Herkunft der Daten, soweit diese nicht bei mir selbst erhoben wurden (Art. 15 Abs. 1 lit. g DSGVO).

2. Löschung (Art. 17 Abs. 1 DSGVO)

Soweit Sie personenbezogene Daten zu meiner Person verarbeiten, fordere ich Sie auf, diese gemäß Art. 17 Abs. 1 DSGVO unverzüglich und vollständig zu löschen. Soweit die Verarbeitung auf Art. 6 Abs. 1 lit. f DSGVO gestützt wird, ergibt sich die Löschpflicht spätestens aus Art. 17 Abs. 1 lit. c DSGVO in Verbindung mit dem unter Ziffer 3 erklärten Widerspruch.

3. Widerspruch gegen Direktwerbung (Art. 21 Abs. 2 DSGVO)

Soweit personenbezogene Daten zu meiner Person zu Zwecken der Direktwerbung verarbeitet werden, lege ich hiermit gemäß Art. 21 Abs. 2 DSGVO Widerspruch gegen diese Verarbeitung ein. Nach Art. 21 Abs. 3 DSGVO dürfen meine personenbezogenen Daten danach nicht mehr für Zwecke der Direktwerbung verarbeitet werden.

Ich weise darauf hin, dass diese E-Mail gemäß Art. 12 Abs. 2 DSGVO einen zulässigen Kommunikationsweg für die Geltendmachung meiner Betroffenenrechte darstellt. Ein Verweis auf ein Online-Formular oder einen anderen Kanal stellt keine Erfüllung der vorliegenden Anfrage dar.

Nach Art. 12 Abs. 3 DSGVO haben Sie mich über die aufgrund dieses Antrags getroffenen Maßnahmen unverzüglich, in jedem Fall aber innerhalb eines Monats nach Eingang dieses Antrags, zu unterrichten.

Für Rückfragen antworten Sie bitte direkt auf diese E-Mail; die Antwortadresse enthält ein Aktenzeichen zur Zuordnung.

Mit freundlichen Grüßen
Erika Mustermann

Aktenzeichen: test1234abcd5678",
}
`;

exports[`buildOptOutRequest > erzeugt die deutsche Selbst-Anfrage ohne optionale Felder 1`] = `
{
  "htmlBody": "<p>Sehr geehrte Damen und Herren,</p>
<p>ich, Erika Mustermann, mache hiermit als betroffene Person meine Rechte nach der Datenschutz-Grundverordnung (DSGVO) Ihnen gegenüber geltend.</p>
<p>Zu meiner Identifikation:<br>
Name: Erika Mustermann<br>
Anschrift: Musterstraße 12, 10115 Berlin, DE<br>
E-Mail-Adressen: erika.mustermann@example.com, e.mustermann@example.org</p>
<p>1. Auskunft (Art. 15 Abs. 1 DSGVO)</p>
<p>Ich ersuche Sie um Auskunft darüber, ob personenbezogene Daten zu meiner Person von Ihnen verarbeitet werden, sowie — soweit dies der Fall ist — um Auskunft über:<br>
a) die Verarbeitungszwecke (Art. 15 Abs. 1 lit. a DSGVO),<br>
b) die Kategorien personenbezogener Daten, die verarbeitet werden (Art. 15 Abs. 1 lit. b DSGVO),<br>
c) die Empfänger oder Kategorien von Empfängern, gegenüber denen die personenbezogenen Daten offengelegt worden sind oder noch offengelegt werden (Art. 15 Abs. 1 lit. c DSGVO),<br>
d) die geplante Dauer der Speicherung bzw. die Kriterien für die Festlegung dieser Dauer (Art. 15 Abs. 1 lit. d DSGVO),<br>
e) alle verfügbaren Informationen über die Herkunft der Daten, soweit diese nicht bei mir selbst erhoben wurden (Art. 15 Abs. 1 lit. g DSGVO).</p>
<p>2. Löschung (Art. 17 Abs. 1 DSGVO)</p>
<p>Soweit Sie personenbezogene Daten zu meiner Person verarbeiten, fordere ich Sie auf, diese gemäß Art. 17 Abs. 1 DSGVO unverzüglich und vollständig zu löschen. Soweit die Verarbeitung auf Art. 6 Abs. 1 lit. f DSGVO gestützt wird, ergibt sich die Löschpflicht spätestens aus Art. 17 Abs. 1 lit. c DSGVO in Verbindung mit dem unter Ziffer 3 erklärten Widerspruch.</p>
<p>3. Widerspruch gegen Direktwerbung (Art. 21 Abs. 2 DSGVO)</p>
<p>Soweit personenbezogene Daten zu meiner Person zu Zwecken der Direktwerbung verarbeitet werden, lege ich hiermit gemäß Art. 21 Abs. 2 DSGVO Widerspruch gegen diese Verarbeitung ein. Nach Art. 21 Abs. 3 DSGVO dürfen meine personenbezogenen Daten danach nicht mehr für Zwecke der Direktwerbung verarbeitet werden.</p>
<p>Ich weise darauf hin, dass diese E-Mail gemäß Art. 12 Abs. 2 DSGVO einen zulässigen Kommunikationsweg für die Geltendmachung meiner Betroffenenrechte darstellt. Ein Verweis auf ein Online-Formular oder einen anderen Kanal stellt keine Erfüllung der vorliegenden Anfrage dar.</p>
<p>Nach Art. 12 Abs. 3 DSGVO haben Sie mich über die aufgrund dieses Antrags getroffenen Maßnahmen unverzüglich, in jedem Fall aber innerhalb eines Monats nach Eingang dieses Antrags, zu unterrichten.</p>
<p>Für Rückfragen antworten Sie bitte direkt auf diese E-Mail; die Antwortadresse enthält ein Aktenzeichen zur Zuordnung.</p>
<p>Mit freundlichen Grüßen<br>
Erika Mustermann</p>
<p>Aktenzeichen: test1234abcd5678</p>",
  "subject": "[Ref: test1234abcd5678] Auskunfts- und Löschersuchen gemäß Art. 15, 17, 21 DSGVO",
  "textBody": "Sehr geehrte Damen und Herren,

ich, Erika Mustermann, mache hiermit als betroffene Person meine Rechte nach der Datenschutz-Grundverordnung (DSGVO) Ihnen gegenüber geltend.

Zu meiner Identifikation:
Name: Erika Mustermann
Anschrift: Musterstraße 12, 10115 Berlin, DE
E-Mail-Adressen: erika.mustermann@example.com, e.mustermann@example.org

1. Auskunft (Art. 15 Abs. 1 DSGVO)

Ich ersuche Sie um Auskunft darüber, ob personenbezogene Daten zu meiner Person von Ihnen verarbeitet werden, sowie — soweit dies der Fall ist — um Auskunft über:
a) die Verarbeitungszwecke (Art. 15 Abs. 1 lit. a DSGVO),
b) die Kategorien personenbezogener Daten, die verarbeitet werden (Art. 15 Abs. 1 lit. b DSGVO),
c) die Empfänger oder Kategorien von Empfängern, gegenüber denen die personenbezogenen Daten offengelegt worden sind oder noch offengelegt werden (Art. 15 Abs. 1 lit. c DSGVO),
d) die geplante Dauer der Speicherung bzw. die Kriterien für die Festlegung dieser Dauer (Art. 15 Abs. 1 lit. d DSGVO),
e) alle verfügbaren Informationen über die Herkunft der Daten, soweit diese nicht bei mir selbst erhoben wurden (Art. 15 Abs. 1 lit. g DSGVO).

2. Löschung (Art. 17 Abs. 1 DSGVO)

Soweit Sie personenbezogene Daten zu meiner Person verarbeiten, fordere ich Sie auf, diese gemäß Art. 17 Abs. 1 DSGVO unverzüglich und vollständig zu löschen. Soweit die Verarbeitung auf Art. 6 Abs. 1 lit. f DSGVO gestützt wird, ergibt sich die Löschpflicht spätestens aus Art. 17 Abs. 1 lit. c DSGVO in Verbindung mit dem unter Ziffer 3 erklärten Widerspruch.

3. Widerspruch gegen Direktwerbung (Art. 21 Abs. 2 DSGVO)

Soweit personenbezogene Daten zu meiner Person zu Zwecken der Direktwerbung verarbeitet werden, lege ich hiermit gemäß Art. 21 Abs. 2 DSGVO Widerspruch gegen diese Verarbeitung ein. Nach Art. 21 Abs. 3 DSGVO dürfen meine personenbezogenen Daten danach nicht mehr für Zwecke der Direktwerbung verarbeitet werden.

Ich weise darauf hin, dass diese E-Mail gemäß Art. 12 Abs. 2 DSGVO einen zulässigen Kommunikationsweg für die Geltendmachung meiner Betroffenenrechte darstellt. Ein Verweis auf ein Online-Formular oder einen anderen Kanal stellt keine Erfüllung der vorliegenden Anfrage dar.

Nach Art. 12 Abs. 3 DSGVO haben Sie mich über die aufgrund dieses Antrags getroffenen Maßnahmen unverzüglich, in jedem Fall aber innerhalb eines Monats nach Eingang dieses Antrags, zu unterrichten.

Für Rückfragen antworten Sie bitte direkt auf diese E-Mail; die Antwortadresse enthält ein Aktenzeichen zur Zuordnung.

Mit freundlichen Grüßen
Erika Mustermann

Aktenzeichen: test1234abcd5678",
}
`;

exports[`buildOptOutRequest > erzeugt die englische Loeschanfrage mit Geburtsdatum und Telefon 1`] = `
{
  "htmlBody": "<p>Dear Sir or Madam,</p>
<p>we are contacting you on behalf of and under power of attorney for the data subject named below. A written authorisation to exercise their data subject rights is on file and can be provided upon request.</p>
<p>Data subject:<br>
Name: Erika Mustermann<br>
Date of birth: 1985-03-14<br>
Address: Musterstraße 12, 10115 Berlin, DE<br>
Email addresses: erika.mustermann@example.com, e.mustermann@example.org<br>
Phone numbers: +49 30 1234567, +49 170 9876543</p>
<p>On behalf of the data subject, we hereby request that you erase all personal data stored about this person at Dummy Broker (E-Mail) without undue delay and in full, pursuant to Art. 17 GDPR (right to erasure). Insofar as the processing is based on Art. 6(1)(f) GDPR, the obligation to erase follows at the latest from Art. 17(1)(c) GDPR in conjunction with the objection declared below.</p>
<p>Insofar as you process the data subject's personal data for direct marketing purposes, we hereby also object to such processing pursuant to Art. 21(2) GDPR.</p>
<p>We hereby note that, pursuant to Article 12(2) GDPR, this email constitutes a valid communication channel for the exercise of our client's data subject rights. A referral to an online form or another channel does not constitute fulfilment of this request.</p>
<p>We further request information pursuant to Art. 15 GDPR regarding which personal data of the data subject have been processed by you and to which recipients or categories of recipients such data have been disclosed.</p>
<p>In addition, we ask you to add the data subject to an internal suppression list in order to prevent their data from being collected and stored again via third-party or external sources in the future.</p>
<p>Please confirm in writing the complete erasure of the data as well as the addition to the suppression list. Pursuant to Art. 12(3) GDPR, you are required to inform us about the action taken without undue delay and in any event within one month of receipt of this request.</p>
<p>For any questions, please reply directly to this email; our reply address contains a reference code for case assignment.</p>
<p>Kind regards<br>
GoKognito<br>
– on behalf of the data subject –</p>
<p>Reference: test1234abcd5678</p>",
  "subject": "[Ref: test1234abcd5678] Data erasure request pursuant to Art. 17 GDPR",
  "textBody": "Dear Sir or Madam,

we are contacting you on behalf of and under power of attorney for the data subject named below. A written authorisation to exercise their data subject rights is on file and can be provided upon request.

Data subject:
Name: Erika Mustermann
Date of birth: 1985-03-14
Address: Musterstraße 12, 10115 Berlin, DE
Email addresses: erika.mustermann@example.com, e.mustermann@example.org
Phone numbers: +49 30 1234567, +49 170 9876543

On behalf of the data subject, we hereby request that you erase all personal data stored about this person at Dummy Broker (E-Mail) without undue delay and in full, pursuant to Art. 17 GDPR (right to erasure). Insofar as the processing is based on Art. 6(1)(f) GDPR, the obligation to erase follows at the latest from Art. 17(1)(c) GDPR in conjunction with the objection declared below.

Insofar as you process the data subject's personal data for direct marketing purposes, we hereby also object to such processing pursuant to Art. 21(2) GDPR.

We hereby note that, pursuant to Article 12(2) GDPR, this email constitutes a valid communication channel for the exercise of our client's data subject rights. A referral to an online form or another channel does not constitute fulfilment of this request.

We further request information pursuant to Art. 15 GDPR regarding which personal data of the data subject have been processed by you and to which recipients or categories of recipients such data have been disclosed.

In addition, we ask you to add the data subject to an internal suppression list in order to prevent their data from being collected and stored again via third-party or external sources in the future.

Please confirm in writing the complete erasure of the data as well as the addition to the suppression list. Pursuant to Art. 12(3) GDPR, you are required to inform us about the action taken without undue delay and in any event within one month of receipt of this request.

For any questions, please reply directly to this email; our reply address contains a reference code for case assignment.

Kind regards
GoKognito
– on behalf of the data subject –

Reference: test1234abcd5678",
}
`;

exports[`buildOptOutRequest > erzeugt die englische Loeschanfrage ohne optionale Felder 1`] = `
{
  "htmlBody": "<p>Dear Sir or Madam,</p>
<p>we are contacting you on behalf of and under power of attorney for the data subject named below. A written authorisation to exercise their data subject rights is on file and can be provided upon request.</p>
<p>Data subject:<br>
Name: Erika Mustermann<br>
Address: Musterstraße 12, 10115 Berlin, DE<br>
Email addresses: erika.mustermann@example.com, e.mustermann@example.org</p>
<p>On behalf of the data subject, we hereby request that you erase all personal data stored about this person at Dummy Broker (E-Mail) without undue delay and in full, pursuant to Art. 17 GDPR (right to erasure). Insofar as the processing is based on Art. 6(1)(f) GDPR, the obligation to erase follows at the latest from Art. 17(1)(c) GDPR in conjunction with the objection declared below.</p>
<p>Insofar as you process the data subject's personal data for direct marketing purposes, we hereby also object to such processing pursuant to Art. 21(2) GDPR.</p>
<p>We hereby note that, pursuant to Article 12(2) GDPR, this email constitutes a valid communication channel for the exercise of our client's data subject rights. A referral to an online form or another channel does not constitute fulfilment of this request.</p>
<p>We further request information pursuant to Art. 15 GDPR regarding which personal data of the data subject have been processed by you and to which recipients or categories of recipients such data have been disclosed.</p>
<p>In addition, we ask you to add the data subject to an internal suppression list in order to prevent their data from being collected and stored again via third-party or external sources in the future.</p>
<p>Please confirm in writing the complete erasure of the data as well as the addition to the suppression list. Pursuant to Art. 12(3) GDPR, you are required to inform us about the action taken without undue delay and in any event within one month of receipt of this request.</p>
<p>For any questions, please reply directly to this email; our reply address contains a reference code for case assignment.</p>
<p>Kind regards<br>
GoKognito<br>
– on behalf of the data subject –</p>
<p>Reference: test1234abcd5678</p>",
  "subject": "[Ref: test1234abcd5678] Data erasure request pursuant to Art. 17 GDPR",
  "textBody": "Dear Sir or Madam,

we are contacting you on behalf of and under power of attorney for the data subject named below. A written authorisation to exercise their data subject rights is on file and can be provided upon request.

Data subject:
Name: Erika Mustermann
Address: Musterstraße 12, 10115 Berlin, DE
Email addresses: erika.mustermann@example.com, e.mustermann@example.org

On behalf of the data subject, we hereby request that you erase all personal data stored about this person at Dummy Broker (E-Mail) without undue delay and in full, pursuant to Art. 17 GDPR (right to erasure). Insofar as the processing is based on Art. 6(1)(f) GDPR, the obligation to erase follows at the latest from Art. 17(1)(c) GDPR in conjunction with the objection declared below.

Insofar as you process the data subject's personal data for direct marketing purposes, we hereby also object to such processing pursuant to Art. 21(2) GDPR.

We hereby note that, pursuant to Article 12(2) GDPR, this email constitutes a valid communication channel for the exercise of our client's data subject rights. A referral to an online form or another channel does not constitute fulfilment of this request.

We further request information pursuant to Art. 15 GDPR regarding which personal data of the data subject have been processed by you and to which recipients or categories of recipients such data have been disclosed.

In addition, we ask you to add the data subject to an internal suppression list in order to prevent their data from being collected and stored again via third-party or external sources in the future.

Please confirm in writing the complete erasure of the data as well as the addition to the suppression list. Pursuant to Art. 12(3) GDPR, you are required to inform us about the action taken without undue delay and in any event within one month of receipt of this request.

For any questions, please reply directly to this email; our reply address contains a reference code for case assignment.

Kind regards
GoKognito
– on behalf of the data subject –

Reference: test1234abcd5678",
}
`;

exports[`buildOptOutRequest > erzeugt die englische Selbst-Anfrage mit Geburtsdatum und Telefon 1`] = `
{
  "htmlBody": "<p>Dear Sir or Madam,</p>
<p>I, Erika Mustermann, hereby exercise my rights as a data subject under the General Data Protection Regulation (GDPR) vis-à-vis your organisation.</p>
<p>For identification purposes:<br>
Name: Erika Mustermann<br>
Date of birth: 1985-03-14<br>
Address: Musterstraße 12, 10115 Berlin, DE<br>
Email addresses: erika.mustermann@example.com, e.mustermann@example.org<br>
Phone numbers: +49 30 1234567, +49 170 9876543</p>
<p>1. Access request (Art. 15(1) GDPR)</p>
<p>I request information as to whether personal data concerning me are processed by you and, where that is the case, access to the following information:<br>
a) the purposes of the processing (Art. 15(1)(a) GDPR),<br>
b) the categories of personal data concerned (Art. 15(1)(b) GDPR),<br>
c) the recipients or categories of recipients to whom the personal data have been or will be disclosed (Art. 15(1)(c) GDPR),<br>
d) the envisaged period for which the personal data will be stored, or the criteria used to determine that period (Art. 15(1)(d) GDPR),<br>
e) any available information as to the source of the data, where the personal data are not collected from me (Art. 15(1)(g) GDPR).</p>
<p>2. Erasure (Art. 17(1) GDPR)</p>
<p>Insofar as you process personal data concerning me, I request that you erase such data without undue delay and in full pursuant to Art. 17(1) GDPR. Insofar as the processing is based on Art. 6(1)(f) GDPR, the obligation to erase follows at the latest from Art. 17(1)(c) GDPR in conjunction with the objection declared under section 3.</p>
<p>3. Objection to direct marketing (Art. 21(2) GDPR)</p>
<p>Insofar as personal data concerning me are processed for direct marketing purposes, I hereby object to such processing pursuant to Art. 21(2) GDPR. Pursuant to Art. 21(3) GDPR, my personal data may no longer be processed for direct marketing purposes thereafter.</p>
<p>I hereby note that, pursuant to Article 12(2) GDPR, this email constitutes a valid communication channel for the exercise of my data subject rights. A referral to an online form or another channel does not constitute fulfilment of this request.</p>
<p>Pursuant to Art. 12(3) GDPR, you are required to inform me about the action taken on this request without undue delay and in any event within one month of its receipt.</p>
<p>For any questions, please reply directly to this email; the reply address contains a reference code for case assignment.</p>
<p>Kind regards<br>
Erika Mustermann</p>
<p>Reference: test1234abcd5678</p>",
  "subject": "[Ref: test1234abcd5678] Access and erasure request pursuant to Art. 15, 17, 21 GDPR",
  "textBody": "Dear Sir or Madam,

I, Erika Mustermann, hereby exercise my rights as a data subject under the General Data Protection Regulation (GDPR) vis-à-vis your organisation.

For identification purposes:
Name: Erika Mustermann
Date of birth: 1985-03-14
Address: Musterstraße 12, 10115 Berlin, DE
Email addresses: erika.mustermann@example.com, e.mustermann@example.org
Phone numbers: +49 30 1234567, +49 170 9876543

1. Access request (Art. 15(1) GDPR)

I request information as to whether personal data concerning me are processed by you and, where that is the case, access to the following information:
a) the purposes of the processing (Art. 15(1)(a) GDPR),
b) the categories of personal data concerned (Art. 15(1)(b) GDPR),
c) the recipients or categories of recipients to whom the personal data have been or will be disclosed (Art. 15(1)(c) GDPR),
d) the envisaged period for which the personal data will be stored, or the criteria used to determine that period (Art. 15(1)(d) GDPR),
e) any available information as to the source of the data, where the personal data are not collected from me (Art. 15(1)(g) GDPR).

2. Erasure (Art. 17(1) GDPR)

Insofar as you process personal data concerning me, I request that you erase such data without undue delay and in full pursuant to Art. 17(1) GDPR. Insofar as the processing is based on Art. 6(1)(f) GDPR, the obligation to erase follows at the latest from Art. 17(1)(c) GDPR in conjunction with the objection declared under section 3.

3. Objection to direct marketing (Art. 21(2) GDPR)

Insofar as personal data concerning me are processed for direct marketing purposes, I hereby object to such processing pursuant to Art. 21(2) GDPR. Pursuant to Art. 21(3) GDPR, my personal data may no longer be processed for direct marketing purposes thereafter.

I hereby note that, pursuant to Article 12(2) GDPR, this email constitutes a valid communication channel for the exercise of my data subject rights. A referral to an online form or another channel does not constitute fulfilment of this request.

Pursuant to Art. 12(3) GDPR, you are required to inform me about the action taken on this request without undue delay and in any event within one month of its receipt.

For any questions, please reply directly to this email; the reply address contains a reference code for case assignment.

Kind regards
Erika Mustermann

Reference: test1234abcd5678",
}
`;

exports[`buildOptOutRequest > erzeugt die englische Selbst-Anfrage ohne optionale Felder 1`] = `
{
  "htmlBody": "<p>Dear Sir or Madam,</p>
<p>I, Erika Mustermann, hereby exercise my rights as a data subject under the General Data Protection Regulation (GDPR) vis-à-vis your organisation.</p>
<p>For identification purposes:<br>
Name: Erika Mustermann<br>
Address: Musterstraße 12, 10115 Berlin, DE<br>
Email addresses: erika.mustermann@example.com, e.mustermann@example.org</p>
<p>1. Access request (Art. 15(1) GDPR)</p>
<p>I request information as to whether personal data concerning me are processed by you and, where that is the case, access to the following information:<br>
a) the purposes of the processing (Art. 15(1)(a) GDPR),<br>
b) the categories of personal data concerned (Art. 15(1)(b) GDPR),<br>
c) the recipients or categories of recipients to whom the personal data have been or will be disclosed (Art. 15(1)(c) GDPR),<br>
d) the envisaged period for which the personal data will be stored, or the criteria used to determine that period (Art. 15(1)(d) GDPR),<br>
e) any available information as to the source of the data, where the personal data are not collected from me (Art. 15(1)(g) GDPR).</p>
<p>2. Erasure (Art. 17(1) GDPR)</p>
<p>Insofar as you process personal data concerning me, I request that you erase such data without undue delay and in full pursuant to Art. 17(1) GDPR. Insofar as the processing is based on Art. 6(1)(f) GDPR, the obligation to erase follows at the latest from Art. 17(1)(c) GDPR in conjunction with the objection declared under section 3.</p>
<p>3. Objection to direct marketing (Art. 21(2) GDPR)</p>
<p>Insofar as personal data concerning me are processed for direct marketing purposes, I hereby object to such processing pursuant to Art. 21(2) GDPR. Pursuant to Art. 21(3) GDPR, my personal data may no longer be processed for direct marketing purposes thereafter.</p>
<p>I hereby note that, pursuant to Article 12(2) GDPR, this email constitutes a valid communication channel for the exercise of my data subject rights. A referral to an online form or another channel does not constitute fulfilment of this request.</p>
<p>Pursuant to Art. 12(3) GDPR, you are required to inform me about the action taken on this request without undue delay and in any event within one month of its receipt.</p>
<p>For any questions, please reply directly to this email; the reply address contains a reference code for case assignment.</p>
<p>Kind regards<br>
Erika Mustermann</p>
<p>Reference: test1234abcd5678</p>",
  "subject": "[Ref: test1234abcd5678] Access and erasure request pursuant to Art. 15, 17, 21 GDPR",
  "textBody": "Dear Sir or Madam,

I, Erika Mustermann, hereby exercise my rights as a data subject under the General Data Protection Regulation (GDPR) vis-à-vis your organisation.

For identification purposes:
Name: Erika Mustermann
Address: Musterstraße 12, 10115 Berlin, DE
Email addresses: erika.mustermann@example.com, e.mustermann@example.org

1. Access request (Art. 15(1) GDPR)

I request information as to whether personal data concerning me are processed by you and, where that is the case, access to the following information:
a) the purposes of the processing (Art. 15(1)(a) GDPR),
b) the categories of personal data concerned (Art. 15(1)(b) GDPR),
c) the recipients or categories of recipients to whom the personal data have been or will be disclosed (Art. 15(1)(c) GDPR),
d) the envisaged period for which the personal data will be stored, or the criteria used to determine that period (Art. 15(1)(d) GDPR),
e) any available information as to the source of the data, where the personal data are not collected from me (Art. 15(1)(g) GDPR).

2. Erasure (Art. 17(1) GDPR)

Insofar as you process personal data concerning me, I request that you erase such data without undue delay and in full pursuant to Art. 17(1) GDPR. Insofar as the processing is based on Art. 6(1)(f) GDPR, the obligation to erase follows at the latest from Art. 17(1)(c) GDPR in conjunction with the objection declared under section 3.

3. Objection to direct marketing (Art. 21(2) GDPR)

Insofar as personal data concerning me are processed for direct marketing purposes, I hereby object to such processing pursuant to Art. 21(2) GDPR. Pursuant to Art. 21(3) GDPR, my personal data may no longer be processed for direct marketing purposes thereafter.

I hereby note that, pursuant to Article 12(2) GDPR, this email constitutes a valid communication channel for the exercise of my data subject rights. A referral to an online form or another channel does not constitute fulfilment of this request.

Pursuant to Art. 12(3) GDPR, you are required to inform me about the action taken on this request without undue delay and in any event within one month of its receipt.

For any questions, please reply directly to this email; the reply address contains a reference code for case assignment.

Kind regards
Erika Mustermann

Reference: test1234abcd5678",
}
`;
